--- a/crates/rmlx/src/semantic/enumeration.rs.html
+++ b/crates/rmlx/src/semantic/enumeration.rs.html
@@ -1349,7 +1349,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">    fn resolve(&amp;mut self, workspace: &amp;mut AnalysisWorkspace) -&gt; bool {</pre>
+                <pre class="has-background-success-light py-0 px-2">    fn resolve(&amp;mut self, workspace: &amp;mut AnalysisWorkspace) -&gt; Result&lt;bool, crate::Error&gt; {</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -1685,7 +1685,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">        self.variants.is_empty()</pre>
+                <pre class="has-background-success-light py-0 px-2">        Ok(self.variants.is_empty())</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -1904,8 +1904,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="1958">
-                1958
+                role="cell" aria-label="2114">
+                2114
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1920,8 +1920,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="1958">
-                1958
+                role="cell" aria-label="2114">
+                2114
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1936,8 +1936,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="1958">
-                1958
+                role="cell" aria-label="2114">
+                2114
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2508,7 +2508,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-15 15:28</p>
+                    <p class="heading">Date: 2025-10-15 17:53</p>
                 </div>
             
         </footer>
