--- a/crates/rmlx/src/semantic/mod.rs.html
+++ b/crates/rmlx/src/semantic/mod.rs.html
@@ -1648,12 +1648,12 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="16">
-                16
+                role="cell" aria-label="18">
+                18
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">            let mut symbols = unresolved_module.resolve(self);</pre>
+                <pre class="has-background-success-light py-0 px-2">            let mut symbols = unresolved_module.resolve(self)?;</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -1664,8 +1664,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="16">
-                16
+                role="cell" aria-label="18">
+                18
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1760,8 +1760,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="12">
-                12
+                role="cell" aria-label="14">
+                14
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1792,8 +1792,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="64">
-                64
+                role="cell" aria-label="65">
+                65
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1952,8 +1952,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="12">
-                12
+                role="cell" aria-label="14">
+                14
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1968,8 +1968,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="12">
-                12
+                role="cell" aria-label="14">
+                14
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1984,8 +1984,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="12">
-                12
+                role="cell" aria-label="14">
+                14
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2176,8 +2176,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="254">
-                254
+                role="cell" aria-label="272">
+                272
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2192,8 +2192,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="254">
-                254
+                role="cell" aria-label="272">
+                272
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2224,8 +2224,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="254">
-                254
+                role="cell" aria-label="272">
+                272
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2368,8 +2368,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2400,8 +2400,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2416,8 +2416,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="246">
-                246
+                role="cell" aria-label="264">
+                264
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2480,8 +2480,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="254">
-                254
+                role="cell" aria-label="272">
+                272
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2512,8 +2512,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2528,8 +2528,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2544,8 +2544,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2560,8 +2560,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2576,8 +2576,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2608,8 +2608,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="244">
-                244
+                role="cell" aria-label="262">
+                262
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2624,8 +2624,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="244">
-                244
+                role="cell" aria-label="262">
+                262
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2640,8 +2640,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="244">
-                244
+                role="cell" aria-label="262">
+                262
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2784,8 +2784,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2800,8 +2800,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2848,8 +2848,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="240">
-                240
+                role="cell" aria-label="258">
+                258
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2896,8 +2896,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="498">
-                498
+                role="cell" aria-label="537">
+                537
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2912,8 +2912,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="374">
-                374
+                role="cell" aria-label="404">
+                404
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2928,8 +2928,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="374">
-                374
+                role="cell" aria-label="404">
+                404
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2944,8 +2944,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="142">
-                142
+                role="cell" aria-label="148">
+                148
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2960,8 +2960,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="232">
-                232
+                role="cell" aria-label="256">
+                256
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -3104,8 +3104,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="228">
-                228
+                role="cell" aria-label="252">
+                252
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -3136,8 +3136,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="374">
-                374
+                role="cell" aria-label="404">
+                404
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -3152,8 +3152,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="248">
-                248
+                role="cell" aria-label="266">
+                266
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -3413,7 +3413,7 @@
             </div>
             <div class="column has-background-white p-0"
                  role="cell">
-                <pre class="has-background-white py-0 px-2">    fn resolve(&amp;mut self, workspace: &amp;mut AnalysisWorkspace) -&gt; bool;</pre>
+                <pre class="has-background-white py-0 px-2">    fn resolve(&amp;mut self, workspace: &amp;mut AnalysisWorkspace) -&gt; Result&lt;bool, crate::Error&gt;;</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -3452,7 +3452,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-15 15:28</p>
+                    <p class="heading">Date: 2025-10-15 17:53</p>
                 </div>
             
         </footer>
