--- a/crates/rmlx/src/semantic/structure.rs.html
+++ b/crates/rmlx/src/semantic/structure.rs.html
@@ -1317,7 +1317,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">    fn resolve(&amp;mut self, workspace: &amp;mut AnalysisWorkspace) -&gt; bool {</pre>
+                <pre class="has-background-success-light py-0 px-2">    fn resolve(&amp;mut self, workspace: &amp;mut AnalysisWorkspace) -&gt; Result&lt;bool, crate::Error&gt; {</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -1525,7 +1525,7 @@
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
-                <pre class="has-background-success-light py-0 px-2">        self.fields.is_empty()</pre>
+                <pre class="has-background-success-light py-0 px-2">        Ok(self.fields.is_empty())</pre>
             </div>
         </div><div class="columns p-0 m-0" role="row">
             <div
@@ -1744,8 +1744,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="108">
-                108
+                role="cell" aria-label="104">
+                104
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1760,8 +1760,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="108">
-                108
+                role="cell" aria-label="104">
+                104
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -1776,8 +1776,8 @@
             </div>
             <div
                 class="column is-1 is-narrow p-0 has-text-centered has-text-success-light has-background-success"
-                role="cell" aria-label="108">
-                108
+                role="cell" aria-label="104">
+                104
             </div>
             <div class="column has-background-success-light p-0"
                  role="cell">
@@ -2380,7 +2380,7 @@
         <footer class="footer">
             
                 <div class="content has-text-centered">
-                    <p class="heading">Date: 2025-10-15 15:28</p>
+                    <p class="heading">Date: 2025-10-15 17:53</p>
                 </div>
             
         </footer>
